<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumerPhone"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Podaj nr telefonu"
        android:ems="10"
        android:hint="@string/podaj_nr_telefonu"
        android:inputType="number"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNumberPhone"
        tools:ignore="LabelFor,MissingConstraints,TextFields,TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:onClick="phoneNumber"
        android:text="@string/contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNumerPhone"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="smsConfirm"
        android:text="@string/confirm_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFirst"
        tools:ignore="MissingConstraints,UsingOnClickInXml,TextContrastCheck" />

    <Button
        android:id="@+id/btnFirst"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:onClick="smsSend"
        android:text="@string/first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHour"
        tools:ignore="MissingConstraints,UsingOnClickInXml,TextContrastCheck" />

    <Button
        android:id="@+id/btnDeleteEvents"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="smsDeleted"
        android:text="@string/delete_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
        tools:ignore="MissingConstraints,UsingOnClickInXml,TextContrastCheck" />

    <TextView
        android:id="@+id/labelHouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/podaj_godzin_wizyty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumerPhone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/labeladdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/podaj_godzin_wizyty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHour"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Podaj godzinę wizyty"
        android:ems="10"
        android:hint="@string/podaj_godzin_wizyty"
        android:inputType="number"
        android:maxLength="6"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelHouer"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/editValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Podaj kwotę"
        android:ems="10"
        android:hint="@string/addValue"
        android:inputType="number"
        android:maxLength="6"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labeladdValue"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/labelNumberPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/podaj_nr_telefonu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>